# video-reels-generator

./: .gitignore  Dockerfile  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  transcricao.txt  tsconfig.json
.next/: react-loadable-manifest.json  trace
.next/server/: _error.js  app-paths-manifest.json  middleware-react-loadable-manifest.js  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-api-runtime.js  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/pages/: _error.js
.next/server/vendor-chunks/: @babel.js  @chakra-ui.js  @emotion.js  @swc.js  @tauri-apps.js  attr-accept.js  call-bind.js  color2k.js  define-data-property.js  es-define-property.js  es-errors.js  file-selector.js  framer-motion.js  function-bind.js  get-intrinsic.js  gopd.js  has-property-descriptors.js  has-proto.js  has-symbols.js  hasown.js  hoist-non-react-statics.js  lodash.mergewith.js  next.js  node-appwrite.js  node-fetch-native-with-agent.js  object-assign.js  qs.js  (+10 more)
public/ffmpeg/: ffmpeg-core.worker.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: download-ffmpeg.js
src-tauri/src/: lib.rs  main.rs  video_processor.rs
src/app/: layout.js  page.js  providers.js
src/components/: LLMConfig.jsx  LoginForm.jsx  MainApp.jsx  PurchaseForm.jsx  SocialMediaResults.jsx  TranscriptionOptions.jsx  VideoEditor.jsx  VideoUploader.jsx  WebcamCapture.jsx
src/lib/: appwrite-setup.js  appwrite.js  stripe.js
src/utils/: prompts.js
(+47 files in other folders)
